--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@ a{
     background-image: url(Image/netaji.jpg);
 }
 .item4 {
-    background-image: url(Image/dggaming.jpg);
+    background-image: url(Image/i52.jpg);
 }
 .card p {
     padding:20px;
